Stopped user input during data processing - better approach forthcoming during move to different swift twitter library Table View cell now autosizes with content.

--- a/TwitterDataTool/TwitterDataTool/Base.lproj/Main.storyboard
+++ b/TwitterDataTool/TwitterDataTool/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -77,13 +78,30 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="Cell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="23I-do-qol">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="Cell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="23I-do-qol" customClass="TweetTableViewCell" customModule="TwitterDataTool" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="23I-do-qol" id="z6o-Tl-G0v">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.666666666666664"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aYv-X3-XTG">
+                                            <rect key="frame" x="26" y="11" width="323" height="22"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailingMargin" secondItem="aYv-X3-XTG" secondAttribute="trailing" constant="10" id="APr-ya-R8y"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="aYv-X3-XTG" secondAttribute="bottom" id="LdL-KQ-aRJ"/>
+                                        <constraint firstItem="aYv-X3-XTG" firstAttribute="leading" secondItem="z6o-Tl-G0v" secondAttribute="leadingMargin" constant="10" id="QZ8-0n-BKv"/>
+                                        <constraint firstItem="aYv-X3-XTG" firstAttribute="top" secondItem="z6o-Tl-G0v" secondAttribute="topMargin" id="hLb-jj-ALs"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="tweetLabel" destination="aYv-X3-XTG" id="oi4-uo-IOD"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
