--- a/TwitterDataTool/TwitterDataTool/Base.lproj/Main.storyboard
+++ b/TwitterDataTool/TwitterDataTool/Base.lproj/Main.storyboard
@@ -19,13 +19,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2cv-6Z-YND">
-                                <rect key="frame" x="0.0" y="275" width="375" height="278"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </scrollView>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xSW-II-CVF">
-                                <rect key="frame" x="16" y="139" width="343" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xSW-II-CVF">
+                                <rect key="frame" x="5" y="88" width="365" height="187"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Enter your terms seperated by spaces" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zi2-2m-Uso">
                                         <rect key="frame" x="8" y="8" width="335" height="21"/>
@@ -44,9 +39,15 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nkq-7p-NcZ">
-                                <rect key="frame" x="100" y="561" width="174" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2cv-6Z-YND">
+                                <rect key="frame" x="10" y="275" width="360" height="329"/>
+                            </scrollView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nkq-7p-NcZ">
+                                <rect key="frame" x="147.66666666666666" y="738" width="79" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="44" id="Swa-WX-xB4"/>
+                                    <constraint firstAttribute="height" constant="30" id="gmL-rC-rKc"/>
+                                </constraints>
                                 <state key="normal" title="Relate Data">
                                     <color key="titleShadowColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
@@ -56,6 +57,18 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="xSW-II-CVF" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="0CF-po-zeR"/>
+                            <constraint firstItem="2cv-6Z-YND" firstAttribute="top" secondItem="xSW-II-CVF" secondAttribute="bottom" id="1RF-Is-PFA"/>
+                            <constraint firstItem="2cv-6Z-YND" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" constant="-10" id="1wF-do-Vmg"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="nkq-7p-NcZ" secondAttribute="bottom" constant="10" id="7hd-tg-Cps"/>
+                            <constraint firstItem="nkq-7p-NcZ" firstAttribute="top" secondItem="2cv-6Z-YND" secondAttribute="bottom" constant="5" id="RpA-HQ-rzU"/>
+                            <constraint firstItem="xSW-II-CVF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="5" id="b5Q-5g-HiO"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xSW-II-CVF" secondAttribute="trailing" constant="5" id="fyt-6y-YPo"/>
+                            <constraint firstItem="2cv-6Z-YND" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="275" id="mGy-rg-iSM"/>
+                            <constraint firstItem="2cv-6Z-YND" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="ouA-uD-DFd"/>
+                            <constraint firstItem="xSW-II-CVF" firstAttribute="centerX" secondItem="nkq-7p-NcZ" secondAttribute="centerX" id="siu-z4-bss"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="A6y-4t-Zfw"/>
@@ -67,7 +80,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-734" y="92"/>
+            <point key="canvasLocation" x="-735.20000000000005" y="91.625615763546804"/>
         </scene>
         <!--Twitter Tweet View Controller-->
         <scene sceneID="ojw-Bb-ovS">
